--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,16 @@
 [package]
-name = "hello-wasm"
-version = "0.1.0"
+authors = ["zkjet <zkjet@mailfence.com>"]
+description = "A sample project with wasm-pack"
 edition = "2021"
+license = "MIT/Apache-2.0"
+name = "hello-wasm"
+repository = "https://github.com/zkjet/hello-wasm"
+version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+crate-type = ["cdylib"]
+
 [dependencies]
+wasm-bindgen = "0.2"
